# RaveX

./: .classpath  .gitattributes  .gitignore  .project  AGENTS.md  CONTRIBUTING.md  FRIENDS.md  LICENSE  README.md  README_EN.md  build.gradle  build.gradle.bak  build.gradle.kts  build.gradle.tmp  build_linux.sh  build_windows.bat  cpa_mixin_bytecode.txt  gentoo_install  gradle.properties  gradlew  gradlew.bat  ravex_client.launch  ravex_server.launch  settings.gradle
Users/Admin/Downloads/RaveX-main3/RaveXLauncher/: .gitignore  CMakeLists.txt  README.md  build.gradle  build_cpp.bat  build_cpp.sh  compile.bat  compile.sh  launch.bat  launch.sh  launch_cpp.bat  launch_cpp.sh  settings.gradle  setup_deps.bat  setup_deps.sh
src/main/c/: CMakeLists.txt
src/main/c/addon/: CMakeLists.txt
src/main/c/addon/include/: c_addon_api.h
src/main/c/addon/main/: c_addon_loader.c
src/main/c/common/: CMakeLists.txt  common.c  common.h
src/main/c/hooks/mediaquery/: CMakeLists.txt
src/main/c/hooks/smth/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt  optimizer.cpp
src/main/cpp/addon/: Addon.cpp  AddonBypass.cpp  AddonConfig.cpp  AddonContext.cpp  AddonError.cpp  AddonEvent.cpp  AddonJni.cpp  AddonListener.cpp  AddonLoader.cpp  AddonLogger.cpp  AddonManager.cpp  AddonMath.cpp  AddonMemory.cpp  AddonMeta.cpp  AddonRegistry.cpp  AddonThread.cpp  AddonVersion.cpp  CMakeLists.txt  LinuxAddonLoader.cpp  SystemUtils.cpp  WinAddonLoader.cpp
src/main/cpp/addon/include/: AddonBypass.hpp  AddonContext.hpp  AddonError.hpp  AddonEvent.h  AddonJni.hpp  AddonListener.h  AddonListener.hpp  AddonLoader.hpp  AddonManager.h  AddonManager.hpp  AddonMath.hpp  AddonMemory.hpp  AddonMeta.hpp  AddonRegistry.h  LinuxAddonLoader.h  SystemUtils.hpp  WinAddonLoader.h
src/main/cpp/antiafk/: CMakeLists.txt  antiafk.cpp  antiafk.h  antiafk_common.h  antiafk_input.h  antiafk_linux.cpp
src/main/cpp/antiafk/include/: antiafk.hpp  antiafk_input.hpp
src/main/cpp/common/: CMakeLists.txt  background_remover.cpp  background_remover.h  memory.cpp  memory.h
src/main/cpp/common/include/: background_remover.hpp  memory.hpp
src/main/cpp/hooks/anchoraura/: CMakeLists.txt  anchoraura.cpp  anchoraura.h  anchoraura_jni.cpp
src/main/cpp/hooks/animations/: CMakeLists.txt  animations.cpp  animations_jni.cpp
src/main/cpp/hooks/antiafk/: CMakeLists.txt  antiafk.cpp  antiafk.h  antiafk_input.h  antiafk_linux.cpp  antiafk_windows.cpp
src/main/cpp/hooks/antibot/: CMakeLists.txt  antibot.cpp  antibot.h  antibot.hpp  antibot_jni.cpp
src/main/cpp/hooks/antipearl/: CMakeLists.txt  antipearl.cpp  antipearl.h  antipearl.hpp  antipearl_jni.cpp  antipearl_jni.hpp
src/main/cpp/hooks/antiquit/: CMakeLists.txt  antiquit.cpp  antiquit_jni.cpp
src/main/cpp/hooks/antiregear/: CMakeLists.txt  antiregear.cpp  antiregear.h  antiregear_jni.cpp
src/main/cpp/hooks/antivoid/: CMakeLists.txt  antivoid.cpp  antivoid_jni.cpp  antivoid_jni.hpp
src/main/cpp/hooks/autoapple/: CMakeLists.txt  autoapple.cpp  autoapple.hpp  autoapple_jni.cpp
src/main/cpp/hooks/autoclicker/: CMakeLists.txt  autoclicker.cpp  autoclicker.h  autoclicker_jni.cpp
src/main/cpp/hooks/autocrystal/: CMakeLists.txt  armor.cpp  armor.h  autocrystal.cpp  autocrystal.h  autocrystal_jni.cpp  autocrystal_jni.h  conditions.cpp  conditions.h  damage.cpp  damage.h  effects.cpp  effects.h  entity_tracker.cpp  entity_tracker.h
src/main/cpp/hooks/autodrop/: CMakeLists.txt  autodrop.cpp  autodrop.h  autodrop_jni.cpp
src/main/cpp/hooks/autoregear/: CMakeLists.txt  autoregear.cpp  autoregear_jni.cpp
src/main/cpp/hooks/baseplace/: CMakeLists.txt  baseplace.cpp  baseplace.h  baseplace_jni.cpp
src/main/cpp/hooks/bedbomb/: CMakeLists.txt  bedbomb.cpp  bedbomb.h  bedbomb_jni.cpp
src/main/cpp/hooks/bowaim/: CMakeLists.txt  bowaim.cpp  bowaim.h  bowaim_jni.cpp
src/main/cpp/hooks/breaker/: CMakeLists.txt  breaker.cpp  breaker.h  breaker_jni.cpp
src/main/cpp/hooks/burrow/: CMakeLists.txt  burrow.cpp  burrow.h  burrow_jni.cpp
src/main/cpp/hooks/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator_jni.cpp  calculator_jni_windows.cpp
src/main/cpp/hooks/chunkexploit/: CMakeLists.txt
src/main/cpp/hooks/coordlogger/: CMakeLists.txt  coordlogger.cpp  coordlogger.hpp  coordlogger_jni.cpp  coordlogger_jni.hpp
src/main/cpp/hooks/desktopgui/: CMakeLists.txt  desktopgui.cpp  desktopgui.h  desktopgui_jni.cpp  desktopgui_windows.cpp
src/main/cpp/hooks/ecfarmer/: CMakeLists.txt  ecfarmer.cpp  ecfarmer.h  ecfarmer.hpp  ecfarmer_break.cpp  ecfarmer_jni.cpp  ecfarmer_jni.hpp  ecfarmer_place.cpp  ecfarmer_rotation.cpp  (+3 more)
src/main/cpp/jni/: CMakeLists.txt  jni_bridge.cpp  jni_bridge.h  jni_bridge.hpp
src/main/cpp/loader/: CMakeLists.txt  checks.cpp  checks.h  checks.hpp  jni_loader.cpp  optimize.cpp  optimize.h  optimize.hpp
src/main/cpp/lua/: CMakeLists.txt
src/main/cpp/math/: CMakeLists.txt  wave_math.cpp  wave_math.h  wave_math.hpp
src/main/cpp/mcprotvis/: CMakeLists.txt  install_deps.sh
src/main/cpp/model/: CMakeLists.txt  anim.cpp  converter.cpp  format_bbmodel.cpp  format_gltf.cpp  format_json.cpp  format_obj.cpp  format_pmx.cpp  model.cpp  model.h  model_cli.cpp  optimize.cpp
src/main/cpp/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h
src/main/cpp/skintool/: CMakeLists.txt  install_deps.sh
src/main/cpp/txtr/: CMakeLists.txt  converter.cpp  format_bmp.cpp  format_dds.cpp  format_jpeg.cpp  format_png.cpp  format_tga.cpp  optimize.cpp  resize.cpp  txtr.cpp  txtr_cli.cpp  txtr_gui.cpp
templates/c/01_minimal/: CMakeLists.txt
templates/c/01_minimal/src/: addon.c
templates/c/02_features/: CMakeLists.txt
templates/c/02_features/src/: addon.c
templates/cpp/: AnotherAddon.cpp  CMakeLists.txt  GUIDE.md  GUIDE_RU.md  README.md  README_RU.md  build.sh
templates/cpp/01_minimal/: CMakeLists.txt  main.cpp
templates/cpp/02_features/: CMakeLists.txt  JniBridge.cpp  JniBridge.hpp  main.cpp  platform.hpp
templates/cpp/03_overlay/: CMakeLists.txt  main.cpp
templates/cpp/04_github/: CMakeLists.txt  main.cpp
templates/cpp/scripts/: build.bat
(+2564 files in other folders)
